--- a/source/_posts/2023-12-25-nyc.md
+++ b/source/_posts/2023-12-25-nyc.md
@@ -5,8 +5,8 @@ comments: true
 categories: notes
 tags: []
 description: "Here my guide / personal perspective of New York, one of the most interesting places I've visited"
-ogp_image: "/files/nyc/thumb2.png"
-ogp_image_twitter: "/files/nyc/thumb2.png"
+ogp_image: "/files/nyc/pthumb2.png"
+ogp_image_twitter: "/files/nyc/pthumb2.png"
 published: true
 ---
 
@@ -19,11 +19,11 @@ published: true
 
 I've recently been to NYC. It was one of the most interesting experiences I've ever had.
 
-Each one has their own perspectives when visiting the city, and I've asked several people about theirs before the trip, which helped immensely in planning out my itinerary. Now it's my time to pay it forward. Here my guide / personal perspective of New York.
+Each one has their own perspectives when visiting the city, and I've asked several people about theirs before the trip, which helped immensely when planning out my itinerary. Now it's my time to pay it forward. Here my guide / personal perspective of New York.
 
 ## Maps
 
-Having a pre-curated list of points of interest on Google Maps was one of the most useful and time efficient aspects of the entire trip. This allowed me to quickly improvise and make the most of my surroundings, since I could just look at the map to check which nearby places could I visit at any given time.
+Having a pre-curated list of points of interest on Google Maps was one of the most useful and time efficient aspects of the entire trip. This allowed me to quickly improvise and make the most of my surroundings, since I could just look at the map to check which nearby places I could visit at any given time.
 
 - [Points of Interest Map](https://maps.app.goo.gl/e6z91pon4Lco8r6F8)
 - [Restaurants Map](https://maps.app.goo.gl/swXwxeps7uAJWcno9)
@@ -167,7 +167,7 @@ MET, or Metropolitan Museum of Art, has two locations: the museum in Fifth Avenu
   ></div>
 </div>
 
-- The museum is massive that spans through classical antiquity and ancient Egypt; paintings and sculptures from nearly all the European masters; and an extensive collection of American and modern art. All of these are intertwined with large thematic rooms where the installations are beautiful to behold. If you are going to see a single museum in New York, this should be the one.
+- This massive museum spans through classical antiquity and ancient Egypt; paintings and sculptures from nearly all the European masters; and an extensive collection of American and modern art. All of these are intertwined with large thematic rooms where the installations are beautiful to behold. If you are going to see a single museum in New York, this should be the one.
 
  <div class="image-mosaic">
   <div
@@ -188,7 +188,7 @@ MET, or Metropolitan Museum of Art, has two locations: the museum in Fifth Avenu
   ></div>
 </div>
 
-- One of the last books I've listen on audiobook was [Walter Isaacson's Benjamin Franklin biography](https://www.amazon.com/Benjamin-Franklin-American-Walter-Isaacson/dp/074325807X), where one of passages goes through the story of how a Duplessis' painting of Franklyn's portrait came to be. This [1778 painting can be seen in the museum](https://www.metmuseum.org/art/collection/search/436236?pkgids=367&pos=1&nextInternalLocale=en&ft=*&oid=436236&rpp=4&exhibitionId=%7Bfc6dc1eb-bea2-4986-afc2-1cd8b02db3ee%7D&pg=1), and curiously enough, Franklyn's depiction on [<span>$</span>100 bills from 1914 to 1990](https://www.uscurrency.gov/denominations/100) had him wearing a fur coat, just like this painting.
+One of the last books I've listen on audiobook was [Walter Isaacson's Benjamin Franklin biography](https://www.amazon.com/Benjamin-Franklin-American-Walter-Isaacson/dp/074325807X), where one of passages goes through the story of how a Duplessis' painting of Franklyn's portrait came to be. This [1778 painting can be seen in the museum](https://www.metmuseum.org/art/collection/search/436236?pkgids=367&pos=1&nextInternalLocale=en&ft=*&oid=436236&rpp=4&exhibitionId=%7Bfc6dc1eb-bea2-4986-afc2-1cd8b02db3ee%7D&pg=1), and curiously enough, Franklyn's depiction on [<span>$</span>100 bills from 1914 to 1990](https://www.uscurrency.gov/denominations/100) had him wearing a fur coat, just like this painting.
 
 <div class="image-mosaic">
   <div
@@ -203,7 +203,7 @@ MET, or Metropolitan Museum of Art, has two locations: the museum in Fifth Avenu
 
 #### MET: Cloisters
 
-- With the same ticket, one can visit the Cloisters and the 5th Avenue museum on the same day. The Cloisters museum is America's only museum dedicated exclusively to the art and architecture of the Middle Ages, and is smaller than the 5th Avenue one. Still there much to explore not only inside the museum, but also on its surroundings
+With the same ticket, one can visit the Cloisters and the 5th Avenue museum on the same day. The Cloisters museum is America's only museum dedicated exclusively to the art and architecture of the Middle Ages, and is smaller than the 5th Avenue one. Still there much to explore not only inside the museum, but also on its surroundings
 
  <div class="image-mosaic">
   <div
@@ -224,7 +224,7 @@ MET, or Metropolitan Museum of Art, has two locations: the museum in Fifth Avenu
   ></div>
 </div>
 
-- Surrounding the Cloisters is the beautiful Fort Tryon Park and it's Heather Garden, sitting right next to the Hudson Riven. A bliss to behold.
+Surrounding the Cloisters is the beautiful Fort Tryon Park and it's Heather Garden, sitting right next to the Hudson Riven. A bliss to behold.
 
  <div class="image-mosaic">
   <div
@@ -265,7 +265,7 @@ MET, or Metropolitan Museum of Art, has two locations: the museum in Fifth Avenu
   ></div>
 </div>
 
-- Another thought that stuck to me is how deeply connected we are to other animals, Earth and outer space. Seeing life sized representations of several of these makes them immediately more relatable.
+Another thought that stuck to me is how deeply connected we are to other animals, Earth and outer space. Seeing life sized representations of several of these makes them immediately more relatable.
 
 
  <div class="image-mosaic">
@@ -316,8 +316,9 @@ On Saturdays, from 5 to 8 pm, admission to the museum is "Pay What You Wish", fo
 
 ### Broadway
 
-- Broadway shows are a hallmark of NYC, although if you are from London or Europe, I would recommend not seeing shows that are already available in London. For example, I've heard that Hamilton is better seen in London, due to the larger contextual part that King George has in the UK.
-- The Chicago musical is a good bet, and is the one I've attended to, it is the second longest-running show ever to run on Broadway, behind only The Phantom of the Opera
+Broadway shows are a hallmark of NYC, although if you are from London or Europe, I would recommend not seeing shows that are already available in London. For example, I've heard that Hamilton is better seen in London, due to the larger contextual part that King George has in the UK.
+
+The Chicago musical is a good bet, and is the one I've attended to, it is the second longest-running show ever to run on Broadway, behind only The Phantom of the Opera
 
 <div class="image-mosaic">
   <div
@@ -342,7 +343,8 @@ Comedy Cellar is a comedy club in Manhattan where many top New York comedians pe
 
 ### Statue of Liberty
 
-- You can get the Staten Island Ferry from the Whitehall terminal, for _free_. On your way to the terminal, several people will try to sell and cajole you into payed trips to the Statue of Liberty trips. The ferry is more than enough.
+You can get the Staten Island Ferry from the Whitehall terminal, for _free_. On your way to the terminal, several people will try to sell and cajole you into payed trips to the Statue of Liberty trips. The ferry is more than enough.
+
 - The ferry runs [every 30 minutes](https://www.nyc.gov/html/dot/html/ferrybus/siferryschedule.shtml), 24 hours per day, for most of the days, and travel time is approximately 25 minutes.
 - Once you get to Staten Island, you can either take some time to explore it, or just return immediately to Manhattan, by exiting the ferry, by entering St. George's Ferry Terminal, and entering the boarding gates for the next ferry.
 - When entering the Whitehall terminal, enter through the right side of the ferry in order to be on the same side that the Statue of Liberty will appear. If entering on St. George's Ferry Terminal, enter through the left side of the ferry. Regardless, you can easily change sides when inside the ferry
@@ -401,8 +403,9 @@ Central Park is an urban park between the Upper West Side and Upper East Side ne
 
 ### High Line and Little Island
 
-- The High Line is a 1.45-mile-long elevated linear park, greenway and rail trail created on a former New York Central Railroad spur on the west side of Manhattan in New York City. If starting it from the north side, you can enter it near Hudson Yards, and walk your way south from there
-- Upon the southern end of the High Line park, you can view Little Island, and quickly walk to it. Little Island is an artificial island park, with some beautiful views and interesting layout
+The High Line is a 1.45-mile-long elevated linear park, greenway and rail trail created on a former New York Central Railroad spur on the west side of Manhattan in New York City. If starting it from the north side, you can enter it near Hudson Yards, and walk your way south from there.
+
+Upon the southern end of the High Line park, you can view Little Island, and quickly walk to it. Little Island is an artificial island park, with some beautiful views and interesting layout
 
 <div class="image-mosaic">
   <div
@@ -447,7 +450,7 @@ The memorial is located at the World Trade Center site, the former location of t
 
 #### Wall Street
 
-- Right on the street itself, we can find the  New York Stock Exchange, the largest stock exchange in the world, which for decades filled the popular imagination with its hustle, bustle and hectic traders. Those same brokers and traders are now surrounded by computers that manage the majority of the buying and selling of stocks for their various accounts. Floor trading still exists, but it is responsible for a rapidly diminishing share of market activity.
+- On the street itself, we can find the  New York Stock Exchange, the largest stock exchange in the world, which for decades filled the popular imagination with its hustle, bustle and hectic traders. Those same brokers and traders are now surrounded by computers that manage the majority of the buying and selling of stocks for their various accounts. Floor trading still exists, but it is responsible for a rapidly diminishing share of market activity.
 - The Charging Bull of Wall Street is not really located on Wall Street itself, but it is quite near. The bull in finance represents optimism and growth. The statue on Wall Street represents the same ideas.
 - The Federal Hall is a historic building, whose original building served as New York's first City Hall and hosted the 1765 Stamp Act Congress before the American Revolution. With the establishment of the United States federal government in 1789, it was renamed Federal Hall, as it hosted the 1st Congress and was where George Washington was sworn in as the nation’s first president. The current structure was built as the U.S. Custom House for the Port of New York before serving as a Subtreasury building from 1862 to 1925, and the current national memorial commemorates the historic events that occurred at the previous structure.
 
@@ -517,9 +520,11 @@ Walking west from Central Harlem, where you can find the Apollo Theatre for exam
 
 ### Citigroup Center
 
-- Due to material changes during construction, the [building](https://maps.app.goo.gl/z4F9FgXe4QfVZvux5) as initially completed was structurally unsound. To save money, Bethlehem Steel changed the plans in 1974 to use bolted joints, and wind loads were calculated from perpendicular winds, as required under the building code; in typical buildings, loads from quartering winds at the corners would be less.
-- In June 1978, after an inquiry from an engineering student, the structural engineer recalculated the wind loads on the building with quartering winds, and found these to significantly increase the load at the bolted joints, and that a wind capable of toppling Citicorp Center would occur every 55 years on average.
-- Starting in August 1978, construction crews covertly fixed the issue, and six weeks into the work, a major storm was off Cape Hatteras and heading for New York. The reinforcement was only half-finished, with New York City hours away from emergency evacuation. The storm eventually turned eastward and veered out to sea. The repairs were finished successfully, and no major issues happened ever since.
+Due to material changes during construction, the [building](https://maps.app.goo.gl/z4F9FgXe4QfVZvux5) as initially completed was structurally unsound. To save money, Bethlehem Steel changed the plans in 1974 to use bolted joints, and wind loads were calculated from perpendicular winds, as required under the building code; in typical buildings, loads from quartering winds at the corners would be less.
+
+In June 1978, after an inquiry from an engineering student, the structural engineer recalculated the wind loads on the building with quartering winds, and found these to significantly increase the load at the bolted joints, and that a wind capable of toppling Citicorp Center would occur every 55 years on average.
+
+Starting in August 1978, construction crews covertly fixed the issue, and six weeks into the work, a major storm was off Cape Hatteras and heading for New York. The reinforcement was only half-finished, with New York City hours away from emergency evacuation. The storm eventually turned eastward and veered out to sea. The repairs were finished successfully, and no major issues happened ever since.
 
 <div class="image-mosaic">
   <div
@@ -546,7 +551,7 @@ Completed in 1912, the Woolworth Building was the tallest building in the world 
 
 ### Billionaires' Row
 
-- Home of [one of the most expensive apartments in the world](https://www.youtube.com/watch?v=aN9DH_GxqEo), the Billionaires' Row hosts a group of ultra-luxury residential skyscrapers. Several of them are so thin that it's hard to believe how they can stand upright without toppling over.
+Home of [one of the most expensive apartments in the world](https://www.youtube.com/watch?v=aN9DH_GxqEo), the Billionaires' Row hosts a group of ultra-luxury residential skyscrapers. Several of them are so thin that it's hard to believe how they can stand upright without toppling over.
 
 <div class="image-mosaic">
 <div
@@ -575,7 +580,7 @@ Completed in 1912, the Woolworth Building was the tallest building in the world 
 ### The Bronx
 
 #### The Joker Stairs
-- The first picture on this note was taken at the "Joker Stairs" is the colloquial name for a step street connecting Shakespeare and Anderson avenues at West 167th Street in the Highbridge neighborhood. The stairs are quite different from when Joaquin Phoenix danced as the Joker. They are more colorful and with a construction side on the top.
+The first picture on this note was taken at the "Joker Stairs" is the colloquial name for a step street connecting Shakespeare and Anderson avenues at West 167th Street in the Highbridge neighborhood. The stairs are quite different from when Joaquin Phoenix danced as the Joker. They are more colorful and with a construction side on the top.
 
 <div class="image-mosaic">
   <div
@@ -585,17 +590,18 @@ Completed in 1912, the Woolworth Building was the tallest building in the world 
 </div>
 
 #### The Birthplace of Hip Hop
-- DJ Kool Herc is credited with helping to start hip hop and rap music at a house concert at 1520 Sedgwick Avenue, which is currently covered by scaffolds [as seen here](https://www.google.com/maps/@40.8471093,-73.9248007,3a,90y,114.56h,101.92t/data=!3m6!1e1!3m4!1s93g4AGnSKx6nUj06gfNaTA!2e0!7i16384!8i8192?entry=ttu). I would recommend to go during daylight hours and to be attentive on your route as it gets rougher on the way there
+DJ Kool Herc is credited with helping to start hip hop and rap music at a house concert at 1520 Sedgwick Avenue, which is currently covered by scaffolds [as seen here](https://www.google.com/maps/@40.8471093,-73.9248007,3a,90y,114.56h,101.92t/data=!3m6!1e1!3m4!1s93g4AGnSKx6nUj06gfNaTA!2e0!7i16384!8i8192?entry=ttu). I would recommend to go during daylight hours and to be attentive on your route as it gets rougher on the way there
 
 #### Yankee Stadium
-- The stadium is the home field for the New York Yankees and New York City FC, and also has some small surrounding parks
+The stadium is the home field for the New York Yankees and New York City FC, and also has some small surrounding parks
 
 ### Brooklyn
 
 #### Williamsburg (Bridge)
 
-- While the Brooklyn Bridge stands as the most famous bridge to cross the East River, you can easily dodge its flocking crowds by crossing the Williamsburg Bridge, which leads you into Williamsbridge, characterized by a contemporary art scene, hipster culture, and vibrant nightlife that has projected its image internationally as a "Little Berlin"
-- You can find several interesting places in Williamsburg such as the Domino Park, Spoonbill & Sugartown Books and the City Reliquary Museum
+While the Brooklyn Bridge stands as the most famous bridge to cross the East River, you can easily dodge its flocking crowds by crossing the Williamsburg Bridge, which leads you into Williamsbridge, characterized by a contemporary art scene, hipster culture, and vibrant nightlife that has projected its image internationally as a "Little Berlin"
+
+You can find several interesting places in Williamsburg such as the Domino Park, Spoonbill & Sugartown Books and the City Reliquary Museum
 
 
 <div class="image-mosaic">
@@ -694,7 +700,7 @@ Prospect Park is an expansive and peaceful urban park with beautiful landmarks a
 ### 5th Avenue
 
 #### Rockefeller Center Christmas Tree
-- The Rockefeller Center Christmas Tree has been a yearly tradition ever since 1931, which now hosts a 20m+ Norway spruce, near to an also historical skating rink, which was opened below the tree in the plaza in 1936. This year, you'll be able to see the tree up until January 13th 2024.
+The Rockefeller Center Christmas Tree has been a yearly tradition ever since 1931, which now hosts a 20m+ Norway spruce, near to an also historical skating rink, which was opened below the tree in the plaza in 1936. This year, you'll be able to see the tree up until January 13th 2024.
 
 <div class="image-mosaic">
   <div
@@ -709,7 +715,7 @@ Prospect Park is an expansive and peaceful urban park with beautiful landmarks a
 
 #### Saks
 - Directly facing the Rockefeller Center, you can find Saks Fifth Avenue, an American luxury department store founded in 1867.
-- As part of this Saks annual holiday, it’s doing in partnership with Dior, where a massive, bronze circle is broken up into eight sections with a deep blue center decorated with all the zodiac signs and a spray of stars, with one big star in the middle, where there is a periodic visual and sound show which is truly impressive.
+- In partnership with Dior, as part of Saks' annual holiday, it is hosting a massive, bronze circle is broken up into eight sections with a deep blue center decorated with all the zodiac signs and a spray of stars, with one big star in the middle, where there is a periodic visual and sound show which is truly impressive.
 
 <div class="image-mosaic">
   <div
@@ -723,7 +729,7 @@ Prospect Park is an expansive and peaceful urban park with beautiful landmarks a
 </div>
 
 #### Trump Tower
-- Just a few blocks north from the above places lies the Trump Tower, where Donald Trump descended on an escalator to announce his candidacy for president, the first step on a journey few believed would take him all the way to the White House.
+Just a few blocks north from the above places lies the Trump Tower, where Donald Trump descended on an escalator to announce his candidacy for president, the first step on a journey few believed would take him all the way to the White House.
 
 <div class="image-mosaic">
   <div
@@ -838,7 +844,7 @@ Prospect Park is an expansive and peaceful urban park with beautiful landmarks a
 
 ## Other Notes
 
-- Something unexpected to me, which cannot be transmitted through visual media, is the collection of smells all around New York, in almost all parts of the city, except the parks and some neighborhoods outside Manhattan. The smell of garbage (since it is comment that it accumulates in heaps of bags on city sidewalks), burnt street meat, horse manure in some parts of Central Park, a smell that I can only describe as pervasive detergent / laundry smell that could even be detected inside several buildings like the MET and Delis; the strong smell of road paint (since it appears that several of the streets were recently repainted), and signature smells from the subway
+- Something unexpected to me, which cannot be transmitted through visual media, is the collection of smells around New York, in almost all parts of the city, except a set of parks and neighborhoods mostly outside Manhattan. The smell of garbage (since it is comment that it accumulates in heaps of bags on city sidewalks), burnt street meat, horse manure in some parts of Central Park, a smell I can only describe as pervasive detergent / laundry smell that could even be detected inside several buildings like the MET and Delis; the strong smell of road paint (since it appears that several of the streets were recently repainted), and signature smells from the subway
 - Several subway lines are relatively shallow, so they are easily heard at street level. They also generally run below the roads themselves, which I would assume to make it easier when building incredibly high skyscrapers whose foundations run quite deep.
 - Be attentive of your surroundings and where you walk, such dodging through garbage debris and sidewalk cellar doors, be them open or [closed](https://www.nydailynews.com/2015/01/26/man-dies-falling-through-cellar-doors-in-brooklyn/)
 - Be prepared to encounter people who are not as well off, and might be living in the streets. Use your judgment, keep out of confusions, be respectable and don't engage with people who have serious mental issues. If you are in a rougher area, memorize your path when possible, and stop at a local shop if you need to get your bearings right. Use your common sense
