--- a/source/_posts/2023-12-25-nyc.md
+++ b/source/_posts/2023-12-25-nyc.md
@@ -754,7 +754,7 @@ Just a few blocks north from the above places lies the Trump Tower, where Donald
 - There are several food stalls around NYC, many of which you will be able to recognize by their LED letterings and smell of burnt meat, I would personally avoid these. There are food stalls which are incredible though. One of these is [Shawarma Bay](https://maps.app.goo.gl/M9xwJBkt5n1bpkY87), just a block away from Radio City Music Hall. Incredible food, although it can gain quite a queue, which can take about 30 minutes, as it was my case. Worth the wait though-- cops were eating there
 - You can get incredibly good Deli Sandwiches in NYC, in places such as [Sunny & Annie's Deli](https://g.co/kgs/eXxHUA). I've personally tried one at [Gold Deli](https://maps.app.goo.gl/qKFMoUoXPdT9qSgg7), and it was seriously good.
 - Are you in Times Square and want to grab a bite? Walk 2 blocks west and you will find yourself in Hell's Kitchen, packed with good restaurants, without much less hassle
-- [Wan Wan](https://maps.app.goo.gl/DDbPvmqBeturoA219) Thai restaurant. That has got to have been the best dining experience I had in NYC, for an acceptable price.
+- [Wan Wan](https://maps.app.goo.gl/DDbPvmqBeturoA219) Thai restaurant was the best dining experience I had in NYC, for an acceptable price.
 - [Joe's Pizza](https://www.google.com/maps/place/Joe's+Pizza/@40.7307059,-74.0133713,14.6z/data=!4m10!1m2!2m1!1sjoes+pizza!3m6!1s0x89c259924a960df1:0x43b20488619b3f43!8m2!3d40.7306597!4d-74.0021707!15sCgpqb2VzIHBpenphWgwiCmpvZXMgcGl6emGSARBwaXp6YV9yZXN0YXVyYW50mgEjQ2haRFNVaE5NRzluUzBWSlEwRm5TVU5vYlRWaWRraG5FQUXgAQA!16s%2Fg%2F1tyyy0n3?entry=ttu) offers traditional New York slice-style pizza at a fair price, that has made a dent in popular culture. Definitely worth the it.
 
 <div class="image-mosaic">
@@ -768,6 +768,7 @@ Just a few blocks north from the above places lies the Trump Tower, where Donald
   ></div>
 </div>
 
+- Want to grab quick, healthy, tasty bite? [Dig Inn](https://www.google.com/maps/search/dig+inn+restaurant+new+york/@40.7389988,-73.9951262,13.11z?entry=ttu) has you covered.
 - Williamsburg's L'Industrie Pizzeria apparently has some of the best pizzas in NYC, but I can't attest to that, given there was a massive queue when I arrived there. So I moved to [Rosa's Pizza](https://www.google.com/maps/place/Rosa's+Pizza/@40.7139722,-73.9582738,17z/data=!3m1!4b1!4m6!3m5!1s0x89c259438227569b:0x1ad684baf4902574!8m2!3d40.7139722!4d-73.9556935!16s%2Fg%2F11grts6bbq?entry=ttu), where I had delicious slice.
 
 - On markets such as the [Chelsea Market](https://maps.app.goo.gl/5idADNssKsJFAe1aA) you can find several good food places.
