--- a/source/_posts/2023-12-25-nyc.md
+++ b/source/_posts/2023-12-25-nyc.md
@@ -4,7 +4,7 @@ title: "New York City Guide"
 comments: true
 categories: notes
 tags: []
-description: "Here my guide / personal perspective of New York, one of the most interesting places I've visited"
+description: "Here is my guide / personal perspective of New York, one of the most interesting places I've ever visited"
 ogp_image: "/files/nyc/pthumb2.png"
 ogp_image_twitter: "/files/nyc/pthumb2.png"
 published: true
@@ -19,7 +19,7 @@ published: true
 
 I've recently been to NYC. It was one of the most interesting experiences I've ever had.
 
-Each one has their own perspectives when visiting the city, and I've asked several people about theirs before the trip, which helped immensely when planning out my itinerary. Now it's my time to pay it forward. Here my guide / personal perspective of New York.
+Each one has their own perspectives when visiting the city, and I've asked several people about theirs before the trip, which helped immensely when planning out my itinerary. Now it's my time to pay it forward. Here is my guide / personal perspective of New York.
 
 ## Maps
 
