--- a/source/_posts/2023-12-25-nyc.md
+++ b/source/_posts/2023-12-25-nyc.md
@@ -17,7 +17,7 @@ published: true
   ></div>
 </div>
 
-I've recently been to NYC. It was one of the most interesting experiences I've ever had.
+I was recently in NYC. It was one of the most interesting experiences I've ever had.
 
 Each one has their own perspectives when visiting the city, and I've asked several people about theirs before the trip, which helped immensely when planning out my itinerary. Now it's my time to pay it forward. Here is my guide / personal perspective of New York.
 
@@ -118,7 +118,7 @@ Right beside the Intrepid lies USS Growler, a diesel powered submarine retrofitt
 - The crew had to maintain absolute secrecy about their mission, and none of their partners knew the context of it
 - The families of the crew members knew nothing about their mission, and that if they did launch a nuclear missile, they would be exposed, and most likely be killed as they expose themselves to launch the nuclear load (not to mention the annihilation that comes from the nuclear warhead)
 
-I found the underlying story and details of this submarine and this mission were so interesting, that right after the tour, I went immediately in search of staff members to ask a series of questions that came about during the visit. They were very kindly and patiently took the time to answer them, and one of the ladies even asked me if I was an engineer. I'm not sure what gave that away. It was either the questions, or my glasses :)
+I found the underlying story and details of this submarine and this mission to be so interesting, that right after the tour, I went immediately in search of staff members to ask a series of questions that came about during the visit. They very kindly and patiently took the time to answer them, and one of the ladies even asked me if I was an engineer. I'm not sure what gave that away. It was either the questions, or my glasses :)
 
  <div class="image-mosaic">
   <div
@@ -146,7 +146,7 @@ MET, or Metropolitan Museum of Art, has two locations: the museum in Fifth Avenu
 #### MET: Fifth Avenue
 
 - If you like the British Museum, you will love MET on Fifth Avenue
-- They reconstructed the 10 BCE [Temple of Dendur](https://en.wikipedia.org/wiki/Temple_of_Dendur) Roman Egyptian religious structure, which originally located in Tuzis (later Dendur). Must I say more?
+- They reconstructed the 10 BCE [Temple of Dendur](https://en.wikipedia.org/wiki/Temple_of_Dendur) Roman Egyptian religious structure, which was originally located in Tuzis (later Dendur). Must I say more?
 
  <div class="image-mosaic">
   <div
@@ -576,11 +576,22 @@ Home of [one of the most expensive apartments in the world](https://www.youtube.
   ></div>
 </div>
 
+### Grand Central Terminal
+- Grand Central Terminal (aka Grand Central Station or Grand Central), is a commuter rail terminal located right in the center of the city. So even if you don't stumble upon it during your commute, it can still be easily reachable via public transportation.
+- It has been the subject, inspiration, or setting for literature, television and radio episodes, and films, and every year the MTA hosts about 25 large-scale and hundreds of smaller or amateur film and television productions.
+
+<div class="image-mosaic">
+<div
+    class="image-mosaic-card image-mosaic-card-wide"
+    style="background-image: url('{{ root_url }}/files/nyc/pPXL_20231215_021419177_2.png')"
+  ></div>
+</div>
+
 
 ### The Bronx
 
 #### The Joker Stairs
-The first picture on this note was taken at the "Joker Stairs" is the colloquial name for a step street connecting Shakespeare and Anderson avenues at West 167th Street in the Highbridge neighborhood. The stairs are quite different from when Joaquin Phoenix danced as the Joker. They are more colorful and with a construction side on the top.
+The first picture on this note was taken at the "Joker Stairs" is the colloquial name for a step street connecting Shakespeare and Anderson avenues at West 167th Street in the Highbridge neighborhood. The stairs are quite different from when Joaquin Phoenix danced as the Joker. They are more colorful and with a construction ongoing at the top.
 
 <div class="image-mosaic">
   <div
@@ -770,7 +781,6 @@ Just a few blocks north from the above places lies the Trump Tower, where Donald
 
 - Want to grab quick, healthy, tasty bite? [Dig Inn](https://www.google.com/maps/search/dig+inn+restaurant+new+york/@40.7389988,-73.9951262,13.11z?entry=ttu) has you covered.
 - Williamsburg's L'Industrie Pizzeria apparently has some of the best pizzas in NYC, but I can't attest to that, given there was a massive queue when I arrived there. So I moved to [Rosa's Pizza](https://www.google.com/maps/place/Rosa's+Pizza/@40.7139722,-73.9582738,17z/data=!3m1!4b1!4m6!3m5!1s0x89c259438227569b:0x1ad684baf4902574!8m2!3d40.7139722!4d-73.9556935!16s%2Fg%2F11grts6bbq?entry=ttu), where I had delicious slice.
-
 - On markets such as the [Chelsea Market](https://maps.app.goo.gl/5idADNssKsJFAe1aA) you can find several good food places.
 
 <div class="image-mosaic">
@@ -823,12 +833,12 @@ Just a few blocks north from the above places lies the Trump Tower, where Donald
   - As an European, the practice of being physically separated from the card, verification via signature, and freely writing down credit card numbers strike me as quite unsecure.
 
 ### Getting Around / Transportation
-- Walking is one of the best ways to discover the city. Sidewalks are broad, the city is grid shaped (so expect to be given coordinates in the form of street / avenue to pinpoint a place), and pedestrian lights and timings ran standard everywhere I visited. I did the large majority of my exploration of the city over the span of 180km throughout 4 days. Extra tip: if you are used to barefoot shoes, wearing [firm ground outsole Vivos](https://www.vivobarefoot.com/rw/) to do so is amazing. My feet were sore, but happy.
+- Walking is one of the best ways to discover the city. Sidewalks are broad, the city is grid shaped (so expect to be given coordinates in the form of street / avenue to pinpoint a place), and pedestrian lights and timings ran standard everywhere I visited. The large majority of my city exploration was made over the span of 180km, throughout 4 days. Extra tip: if you are used to barefoot shoes, wearing [firm ground outsole Vivos](https://www.vivobarefoot.com/rw/) to do so is amazing. My feet were sore, but happy.
 - Walking through the perpendicular numbered streets and avenues is an absolute bliss, and makes it quite easy to navigate through them. Several times I just looked at the map and quickly memorized something like "3 right, 2 left", which translated to "cross 3 roads and turn right, and then cross 2 roads and turn left". This would keep me walking going for a long time and have time to appreciate the surroundings, without the need to constantly check the map.
 - Ferry boats are a great way to sight the city, for a low price (<span>$</span>4 for a one way-ticket), and you can buy these tickets through the NYC Ferry app or a ticket vending machine.
 - Subway and Bus now have OMNI, which just means that you can tap in with your credit / debit card. Each ride costs <span>$</span>2.90, and there are no different prices for different zones. This has a [rolling 7 day price cap] (https://omny.info/fares), so you never pay more than <span>$</span>34 over that period.
-  - Metro Card is the pre-paid version of this. You need one, buy them directly from the machines to avoid being scammed. For example, a 7-Day Unlimited MetroCard costs <span>$</span>34 upfront, and can be used any number of times during those 7 days.
-    - Be aware that if you swipe in, get out from the station, and then attempt to shortly swipe in again, it will reject your swipe, due to being too recent. If that happens, ask an MTA attendant to let you in (if available), or do like many others and wait for someone to crack open the emergency exit from the inside. If you hear an alarm going off in the station, most likely is because someone opened the emergency exit to let others in.
+  - Metro Card is the pre-paid version of this. If you need one, buy it directly from the machines to avoid being scammed. For example, a 7-Day Unlimited MetroCard costs <span>$</span>34 upfront, and can be used any number of times during those 7 days.
+    - Be aware that if you swipe in, then get out from the station, and then attempt to shortly swipe in again, it will reject your swipe, due to being too recent. If that happens, ask a MTA attendant to let you in (if available), or do like many others and wait for someone to crack open the emergency exit from the inside. If you hear an alarm going off in the station, most likely it is because someone opened the emergency exit to let others in.
 - Just like routine events such as figuring out post-tax prices purchases or how much and when to tip require some kind of mental effort, figuring out the different edge cases of the subway system will keep your mind busy. It is like there is a perpetual rat race game being played in the city.
   - Sometimes trains stop at all stations, sometimes they don't, sometimes trains have indicators of which station you are in, sometimes they don't, sometimes the station has (non-standard) indications of how much time it takes for the next train to arrive, sometimes they don't. Sometimes it rains heavily inside the stations, sometimes it doesn't.
 
@@ -848,8 +858,8 @@ Just a few blocks north from the above places lies the Trump Tower, where Donald
 - Something unexpected to me, which cannot be transmitted through visual media, is the collection of smells around New York, in almost all parts of the city, except a set of parks and neighborhoods mostly outside Manhattan. The smell of garbage (since it is comment that it accumulates in heaps of bags on city sidewalks), burnt street meat, horse manure in some parts of Central Park, a smell I can only describe as pervasive detergent / laundry smell that could even be detected inside several buildings like the MET and Delis; the strong smell of road paint (since it appears that several of the streets were recently repainted), and signature smells from the subway
 - Several subway lines are relatively shallow, so they are easily heard at street level. They also generally run below the roads themselves, which I would assume to make it easier when building incredibly high skyscrapers whose foundations run quite deep.
 - Be attentive of your surroundings and where you walk, such dodging through garbage debris and sidewalk cellar doors, be them open or [closed](https://www.nydailynews.com/2015/01/26/man-dies-falling-through-cellar-doors-in-brooklyn/)
-- Be prepared to encounter people who are not as well off, and might be living in the streets. Use your judgment, keep out of confusions, be respectable and don't engage with people who have serious mental issues. If you are in a rougher area, memorize your path when possible, and stop at a local shop if you need to get your bearings right. Use your common sense
-- You might have noticed that I didn't mention the common Edge / Top of the Rock / Summit One / Empire State Building / etc observation decks. It's not that I don't enjoy incredible views, but it didn't fall high enough on the list of priorities, specially because I've had the opportunity to have skyline views through other buildings I've passed by, such as the Hotel.
+- Be prepared to encounter people who are not as well off, and might be living in the streets. Use your judgment, keep out of confusions, be respectable and don't engage with people who have serious mental issues. If you are in a rougher area, memorize your path when possible, and stop at a local shop if you need to get your bearings. Use your common sense
+- You might have noticed that I didn't mention the common Edge / Top of the Rock / Summit One / Empire State Building / etc observation decks. It's not that I don't enjoy incredible views, but it didn't fall high enough on the list of priorities, specially because I've had the opportunity to see skyline views through other buildings I've passed by, such as the Hotel.
 - I tend to like long trans-atlantic flights, since they provide a moment of low stimuli, where there is less incentive to use the internet. My personal piece of advice would be to avoid the usual in-flight entertainment. I love to use them to resume a book or to write down my reflections from a trip for example (several of article lines were written during the return flight)
 - This only shows my ignorance, but I had no idea that so many well-known artists were originally from New York, like Jay-Z (Brooklyn), Cardi B (South Bronx), Spike Lee (Brooklyn), and of course, [Jenny from the block](https://www.youtube.com/watch?v=RciKM866Rhk). That explains why I've consecutively heard "Empire State of Mind", from Jay-Z and Alicia Keys (Hell's Kitchen), and "All I want for Christmas is You", from Mariah Carey (raised in Huntington).
 
@@ -866,8 +876,8 @@ Just a few blocks north from the above places lies the Trump Tower, where Donald
 
 ## Closing Thoughts
 
-Ever since I was a kid I had considerable fascination with the USA. The culture that arrived through the small and big screens, the big companies and entrepreneurs that I admired, the language, the people I've met along the way, the stories. Having had the opportunity to visit it and experience first hand was a true privilege. I've lived it like it was the last time I would visit it, and it imprinted in me several thoughts and perspectives that I'm sure will last a lifetime.
+Ever since I was a kid I had a considerable fascination with the USA. The culture that arrived through the small and big screens, the big companies and entrepreneurs that I admired, the language, the people I've met along the way, the stories. Having had the opportunity to visit and experience it first hand was a true privilege. I've lived it like it was my last time, and it imprinted in me several thoughts and perspectives that I'm sure to last a lifetime.
 
 New York ain't no DisneyLand, and Elmo's pictures in Times Square don't come for free either, so set expectations accordingly. It can be one of the most fulfilling experiences you'll ever have. I advise you to come prepared and plan accordingly.
 
-Frank Sinatra sang that he wants "to wake up in the city that doesn't sleep". That phrase has a deep meaning that only struck me upon my trip. The city does not indeed sleep. Times Square lights, 24 hour subway, the constant movement. Living in NYC does wake you up, not only literally, but also figuratively. It wakes you up towards a different reality that keeps you on your toes in several ways. In a way, it's a celebration of life.
+Frank Sinatra sang that he wants "to wake up in the city that doesn't sleep". That phrase has a deep meaning that only struck me during my trip. The city does not indeed sleep. The Times Square lights, 24 hour subway, the constant movement. Living in NYC wakes you up, not only literally, but also figuratively. It wakes you up to a different reality that keeps you on your toes in several ways. In a way, it's a celebration of life.
