--- a/source/_posts/2023-12-25-nyc.md
+++ b/source/_posts/2023-12-25-nyc.md
@@ -591,7 +591,7 @@ Home of [one of the most expensive apartments in the world](https://www.youtube.
 ### The Bronx
 
 #### The Joker Stairs
-The first picture on this note was taken at the "Joker Stairs" is the colloquial name for a step street connecting Shakespeare and Anderson avenues at West 167th Street in the Highbridge neighborhood. The stairs are quite different from when Joaquin Phoenix danced as the Joker. They are more colorful and with a construction ongoing at the top.
+The first picture on this note was taken at the "Joker Stairs", which is the colloquial name for a step street connecting Shakespeare and Anderson avenues at West 167th Street in the Highbridge neighborhood. The stairs are quite different from when Joaquin Phoenix danced as the Joker. They are more colorful, and have a construction site ongoing at the top.
 
 <div class="image-mosaic">
   <div
@@ -601,10 +601,10 @@ The first picture on this note was taken at the "Joker Stairs" is the colloquial
 </div>
 
 #### The Birthplace of Hip Hop
-DJ Kool Herc is credited with helping to start hip hop and rap music at a house concert at 1520 Sedgwick Avenue, which is currently covered by scaffolds [as seen here](https://www.google.com/maps/@40.8471093,-73.9248007,3a,90y,114.56h,101.92t/data=!3m6!1e1!3m4!1s93g4AGnSKx6nUj06gfNaTA!2e0!7i16384!8i8192?entry=ttu). I would recommend to go during daylight hours and to be attentive on your route as it gets rougher on the way there
+DJ Kool Herc is credited with helping to start hip hop and rap music at a house concert at 1520 Sedgwick Avenue, which is currently covered by scaffolds [as seen here](https://www.google.com/maps/@40.8471093,-73.9248007,3a,90y,114.56h,101.92t/data=!3m6!1e1!3m4!1s93g4AGnSKx6nUj06gfNaTA!2e0!7i16384!8i8192?entry=ttu). I would recommend to go during daylight hours and to be attentive to your route, as it gets rougher on the way there.
 
 #### Yankee Stadium
-The stadium is the home field for the New York Yankees and New York City FC, and also has some small surrounding parks
+The stadium is the home field for the New York Yankees and New York City FC, and also has some small surrounding parks.
 
 ### Brooklyn
 
@@ -612,7 +612,7 @@ The stadium is the home field for the New York Yankees and New York City FC, and
 
 While the Brooklyn Bridge stands as the most famous bridge to cross the East River, you can easily dodge its flocking crowds by crossing the Williamsburg Bridge, which leads you into Williamsbridge, characterized by a contemporary art scene, hipster culture, and vibrant nightlife that has projected its image internationally as a "Little Berlin"
 
-You can find several interesting places in Williamsburg such as the Domino Park, Spoonbill & Sugartown Books and the City Reliquary Museum
+You can find several interesting places in Williamsburg such as the Domino Park, Spoonbill & Sugartown Books and the City Reliquary Museum.
 
 
 <div class="image-mosaic">
@@ -644,7 +644,7 @@ The Brooklyn Bridge is an iconic landmark of NYC, which you can cross from Manha
 
 #### Dumbo & Brooklyn Heights
 
-Once you cross the Brooklyn Bridge, you can head directly to Dumbo, where you have beautiful view to the Manhattan Bridge
+Once you cross the Brooklyn Bridge, you can head directly to Dumbo, where you have a beautiful view to the Manhattan Bridge
 
 <div class="image-mosaic">
   <div
