--- a/source/_posts/2025-07-15-arduino.md
+++ b/source/_posts/2025-07-15-arduino.md
@@ -531,8 +531,8 @@ Notice that even after all writes were committed, there are still bits flowing t
 
 <center>
  <div class="video-media-caption-wrapper-two"><div class="video-wrapper-two">
-  <div class="youtube-player video-frame-two" data-id="eRZ1QjW8w1c"></div></div>
-   <p class="media-caption media-caption-two">Left LED stays enabled during writing phase. Yellow LED represents single bits in the TX communication stream</p>
+  <div class="youtube-player video-frame-two" data-id="V1EFe0CodHA"></div></div>
+   <p class="media-caption media-caption-two">Left green LED stays enabled during writing phase. Yellow LED represents single bits in the TX communication stream</p>
  </div>
 </center>
 
