--- a/source/_posts/2025-07-15-arduino.md
+++ b/source/_posts/2025-07-15-arduino.md
@@ -10,6 +10,7 @@ ogp_image_twitter: "/files/arduino/thumb/pelegoo_compressed.jpg"
 published: true
 ---
 
+
 Earlier this year I saw a [Tech Ingredients episode](https://www.youtube.com/watch?v=IrocytwdeEY) where a laser gimbal automatically tracks drones and shoots them down. I was fascinated by their motion control mechanism, specially the usage of a PI Controller, a high-frequency clock [Teensy microcontroller](https://www.pjrc.com/store/teensy40.html), and their integration with custom hardware and a machine vision powered tracker.
 
 Soon after I was researching the underlying electronics and how to experiment upon their concepts. The most obvious microcontroller to drive these would be an Arduino, but several recommendations pointed towards acquiring a kit rather than a single microcontroller, and the [Elegoo Arduino Uno R3 Starter Kit](https://www.amazon.co.uk/ELEGOO-Complete-Ultimate-controller-Compatible/dp/B01IUY62RM) seemed the best.
@@ -19,6 +20,8 @@ The kit contains over 200 components and an [extensive guided tutorial](https://
 {% imgopt /files/arduino/pelegoo ELEGOO UNO R3 Project The Most Complete Starter Kit %}
 
 <!--more-->
+
+*See the [video version of the article here](https://www.youtube.com/watch?v=25vJvHLKvSE).*
 
 <br/>
 
@@ -612,3 +615,4 @@ The time project is the opus maximus of the provided tutorials provided by Elego
    <p class="media-caption media-caption-two">Timer Integration</p>
  </div>
 </center>
+
